--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet " type="text/css" href="mycss.css">
   </head>
   <body>
+    <h2>Rosa kocken</h2>
+<img src="Rosakocklog.jpg" alt="Mountain View" style="width:500px;height:300px;">
     Hej
 <br>hej
     <p class="hej">Hej igen</p>
